test/expressions/vass/cast-to-non-type-2.chpl
var t: string;
const c = 1:t;
compilerWarning("c: ", c.type:string, 0);
